# span-finder

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
sftp/: __init__.py  cli.py  hf_model.py
sftp/compat/: __init__.py  model_loader.py  predictor.py  vocabulary.py
sftp/data_reader/: __init__.py  better_reader.py  span_reader.py  srl_reader.py
sftp/metrics/: __init__.py
sftp/models/: span_model.py
sftp/modules/: smooth_crf.py
sftp/modules/span_finder/: bio_span_finder.py  span_finder.py
sftp/modules/span_typing/: mlp_span_typing.py  span_typing.py
sftp/predictor/: span_predictor.py
sftp/training/: __init__.py  transformer_optimizer.py
sftp/utils/: __init__.py  label_smoothing.py  span.py
